Closed
Bug 1324604
Opened 9 years ago
Closed 9 years ago
IMPLEMENTATION_COLOR_READ_FORMAT/TYPE queries generate unexpected error on OSX+NV
Categories
(Core :: Graphics: CanvasWebGL, defect, P1)
Core
Graphics: CanvasWebGL
Tracking
()
RESOLVED
FIXED
mozilla53
People
(Reporter: jgilbert, Assigned: jgilbert)
Details
(Whiteboard: gfx-noted)
Attachments
(2 files)
58 bytes,
text/x-review-board-request
|
daoshengmu
:
review+
gchang
:
approval-mozilla-aurora+
gchang
:
approval-mozilla-beta+
|
Details |
58 bytes,
text/x-review-board-request
|
Details |
The ES2_compat GL extension is supposed to allow this query, but is actually spec'd to always return RGBA/UNSIGNED_BYTE. It looks like we should just ignore these queries except on actual GLES.
Comment hidden (mozreview-request) |
Comment hidden (mozreview-request) |
Comment 3•9 years ago
|
||
mozreview-review |
Comment on attachment 8820088 [details]
Bug 1324604 - Only query IMPLEMENTATION_COLOR_READ_FORMAT/TYPE on actual GLES. -
https://reviewboard.mozilla.org/r/99612/#review100072
LGTM
Attachment #8820088 -
Flags: review?(dmu) → review+
Comment hidden (mozreview-request) |
Pushed by jgilbert@mozilla.com:
https://hg.mozilla.org/integration/mozilla-inbound/rev/45d134d04971
Only query IMPLEMENTATION_COLOR_READ_FORMAT/TYPE on actual GLES. (flattened) - r=daoshengmu
Comment 6•9 years ago
|
||
bugherder |
Status: NEW → RESOLVED
Closed: 9 years ago
status-firefox53:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → mozilla53
Assignee | ||
Comment 7•9 years ago
|
||
Comment on attachment 8820088 [details]
Bug 1324604 - Only query IMPLEMENTATION_COLOR_READ_FORMAT/TYPE on actual GLES. -
Approval Request Comment
[Feature/Bug causing the regression]: webgl2
[User impact if declined]:
[Is this code covered by automated tests?]:
[Has the fix been verified in Nightly?]:
[Needs manual test from QE? If yes, steps to reproduce]:
[List of other uplifts needed for the feature/fix]:
[Is the change risky?]:
[Why is the change risky/not risky?]:
[String changes made/needed]:
Attachment #8820088 -
Flags: approval-mozilla-beta?
Attachment #8820088 -
Flags: approval-mozilla-aurora?
Updated•9 years ago
|
status-firefox51:
--- → affected
status-firefox52:
--- → affected
Comment 8•9 years ago
|
||
Comment on attachment 8820088 [details]
Bug 1324604 - Only query IMPLEMENTATION_COLOR_READ_FORMAT/TYPE on actual GLES. -
Fix WebGL2 related issue. Beta51+ & Aurora52+. Should be in 51 beta 10.
Attachment #8820088 -
Flags: approval-mozilla-beta?
Attachment #8820088 -
Flags: approval-mozilla-beta+
Attachment #8820088 -
Flags: approval-mozilla-aurora?
Attachment #8820088 -
Flags: approval-mozilla-aurora+
Comment 9•9 years ago
|
||
Comment 10•9 years ago
|
||
You need to log in
before you can comment on or make changes to this bug.
Description
•