Bug 1324604 - Only query IMPLEMENTATION_COLOR_READ_FORMAT/TYPE on actual GLES. (flattened) - r=daoshengmu

MozReview-Commit-ID: 3KFbKZremf2